# wit-bindgen

./: Cargo.toml
crates/gen-wasmi/: Cargo.toml
crates/gen-wasmi/src/: lib.rs
crates/wasmi/: Cargo.toml
crates/wasmi-impl/: Cargo.toml
crates/wasmi-impl/src/: lib.rs
crates/wasmi/src/: error.rs  lib.rs  region.rs
