[package]
name = "wit-bindgen-wasmi-impl"
version = "0.2.0"
authors = ["Flavio Castelli <flavio@castelli.me>"]
edition = "2018"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wit-bindgen-gen-core = { path = "../gen-core", version = "0.2" }
wit-bindgen-gen-wasmi = { path = "../gen-wasmi", version = "0.2" }

[features]
tracing = []
async = []
